use all script locally

--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/jquery": "^3.3.31",
     "bootstrap": "^4.3.1",
+    "bootstrap-select": "^1.13.12",
     "core-js": "^2.5.4",
     "flag-icon-css": "^3.3.0",
+    "jquery": "^3.4.1",
     "particles.js": "^2.0.0",
+    "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
